Mon Aug  1 05:21:42 2011  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* cont.c (cont_save_thread): fix missing semicolon.

Sun Jul 31 22:57:16 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* enc/Makefile.in (ECHO1): Same as the recent fix in common.mk.
	  ":" in a make variable replacement cause a syntax error with
	  /usr/ccs/bin/make on Solaris.  Uses $(NULLCMD) instead.

Sun Jul 31 22:44:08 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* configure.in: fix typos.

Sun Jul 31 21:19:51 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/mkmf.rb (configuration:ECHO1): Same as the recent fix in
	  common.mk.
	  ":" in a make variable replacement cause a syntax error with
	  /usr/ccs/bin/make on Solaris.  Uses $(NULLCMD) instead.

Sun Jul 31 21:16:02 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* complex.c (f_signbit): gcc4 on Solaris DOES have signbit but does
	  not have it on header.

	* math.c: ditto.

Sun Jul 31 21:09:04 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk (node_name.inc): Use $(Q) for consistency.

	* Makefile.in (INSNS): ditto.

Sun Jul 31 20:39:12 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk (ECHO1): nmake does not allow parenthesis in make variable
	  replacement.

Sun Jul 31 20:21:36 2011  "Yuki Sonoda (Yugui)"  <yugui@yugui.jp>

	* common.mk (ECHO1): ":" in a make variable replacement cause a syntax
	  error with /usr/ccs/bin/make on Solaris.  Uses $(NULLCMD) instead.

	* configure.in (NULLCMD): new check.

	* Makefile.in (NULLCMD): Reflects checking in configure.

	* win32/Makefile.sub (NULLCMD): new assignment.

Sun Jul 31 11:31:07 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* backport r32768 from trunk.

	* vm.c: check if cfp is valid. [Bug #5083] [ruby-dev:44208]

Sat Jul 31 01:23:45 2011  Kenta Murata  <mrkn@mrkn.jp>

	* backport r32762 from trunk.

	* test/bigdecimal/test_bigdecimal.rb (test_version): removed.

Sat Jul 30 23:51:44 2011  Tadayoshi Funaba  <tadf@dotrb.org>
